--- a/onlyguima/src/App.css
+++ b/onlyguima/src/App.css
@@ -40,8 +40,8 @@ body {
   padding: 0;
   margin: 0;
   /* background: #403f53; */
-  background-image: url("./assets/rizki-dwi-yd1wWWilf4o-unsplash.jpg");
-  background-size: fill;
+  background-image: url("./assets/photo-1576502202167-791eca35a78d.jfif");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
   background-position-y: 55%;
@@ -556,6 +556,8 @@ a {
   z-index: 0;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  width: 460px;
+  height: 250px;
 }
 
 .label-card {
@@ -564,8 +566,8 @@ a {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   display: block;
-  width: 300px;
-  height: 200px;
+  width: 460px;
+  height: 250px;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -589,7 +591,6 @@ a {
   position: absolute;
   height: 100%;
   width: 100%;
-  text-align: center;
   line-height: 200px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -615,9 +616,43 @@ a {
   border-left: solid 1px rgba(255, 255, 255, 0.3);
 }
 
+.card .front {
+  text-align: start;
+  line-height: 40px;
+  font-size: 1.3rem;
+  /* padding-left: 30px;
+  padding-top: 30px; */
+}
+
+.card-image {
+  max-width: 130px;
+  /* padding: 25px; */
+  padding-left: 30px;
+  padding-top: 30px;
+}
+
+.card-text {
+  padding-left: 30px;
+  /* padding-top: 30px; */
+}
+
+.card-text-empresa {
+  padding-left: 30px;
+  /* padding-top: 30px; */
+  font-family: "Montserrat", sans-serif;
+}
+
+.card-text-funcao {
+  padding-left: 30px;
+  /* padding-top: 30px; */
+  /* font-family: "Dancing Script", cursive; */
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+}
+
 label:hover .card {
   -webkit-transform: rotateY(10deg);
-
+  border-radius: 20px;
   transform: rotateY(10deg);
   box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2);
 }
@@ -639,24 +674,46 @@ label:hover :checked + .card {
 
 .glassContainer1 {
   position: absolute;
-  top: 45%;
+  top: 50%;
   height: 10em;
 }
 
 .glassContainer2 {
   position: absolute;
-  top: 75%;
+  top: 90%;
   height: 10em;
 }
 
 .glassContainer3 {
   position: absolute;
-  top: 115%;
+  top: 130%;
   height: 10em;
 }
 
 .glassContainer4 {
   position: absolute;
-  top: 155%;
+  top: 170%;
   height: 10em;
+}
+
+.glassContainer5 {
+  position: absolute;
+  top: 210%;
+  height: 10em;
+}
+
+.techStack {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 40%;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  box-shadow: inset 0px 0px 20px 30px rgb(255 255 255 / 14%);
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+  backdrop-filter: blur(5px);
+  border-top: solid #ffffff6e 1px;
+  margin: 1em;
+  display: inline-block;
+  object-fit: contain;
 }
