--- a/onlyguima/src/App.css
+++ b/onlyguima/src/App.css
@@ -40,7 +40,7 @@ body {
   padding: 0;
   margin: 0;
   /* background: #403f53; */
-  background-image: url("./assets/photo-1576502202167-791eca35a78d.jfif");
+  background-image: url("./assets/pexels-johannes-plenio-1103970.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
@@ -540,7 +540,7 @@ a {
 /* ### GLASS CARD ### */
 
 .card-blur {
-  border-radius: 20px;
+  /* border-radius: 20px;
   background-color: unset;
   backdrop-filter: blur(10px);
   -webkit-perspective: 1000px;
@@ -548,8 +548,8 @@ a {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   display: block;
-  width: 300px;
-  height: 200px;
+  width: 650px !important;
+  height: 400px !important;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -557,38 +557,104 @@ a {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 460px;
-  height: 250px;
+  height: 250px; */
 }
 
 .label-card {
-  -webkit-perspective: 1000px;
+  /* -webkit-perspective: 1000px;
   perspective: 1000px;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   display: block;
-  width: 460px;
-  height: 250px;
+  width: 650px;
+  height: 400px;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  cursor: pointer;
+  cursor: pointer; */
+  text-align: center;
+}
+
+.container {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 100%;
+  left: 50%;
+  perspective: 1900px;
 }
 
 .card {
-  position: relative;
+  /* position: relative;
   height: 100%;
   width: 100%;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transition: all 600ms;
   transition: all 600ms;
-  z-index: 20;
+  z-index: 20; */
+  width: 800px;
+  height: 400px;
+  /* border: 1px solid white; */
+  position: relative;
+  cursor: pointer;
+}
+
+.card:hover .tras {
+  transform: rotateY(0deg);
+}
+
+.card:hover .frente {
+  transform: rotateY(180deg);
+}
+
+.frente {
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+
+.tras {
+  justify-content: space-around;
+  transform: rotateY(180deg);
+}
+
+.frente img {
+  max-width: 300px;
+  padding-left: 30px;
+  /* padding-top: 30px; */
+  object-fit: contain;
+}
+
+.frente,
+.tras {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(20px);
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  box-shadow: 0 20px 40px rgb(255 255 255 / 23%);
+  position: absolute;
+  backface-visibility: hidden;
+  transition: transform 1s ease-in-out;
+  padding-block: 50px;
+  top: 30%;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  /* justify-content: space-between; */
+  align-items: flex-start;
+  padding-inline: 1.5em;
 }
 
 .card div {
-  position: absolute;
+  /* position: absolute;
   height: 100%;
   width: 100%;
   line-height: 200px;
@@ -596,11 +662,11 @@ a {
   backface-visibility: hidden;
   border-radius: 20px;
 
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.4); */
   /* backdrop-filter: blur(10px); */
-  border-radius: 20px;
+  /* border-radius: 20px;
   border-top: solid 1px rgba(255, 255, 255, 0.5);
-  border-left: solid 1px rgba(255, 255, 255, 0.3);
+  border-left: solid 1px rgba(255, 255, 255, 0.3); */
 }
 
 .card .back {
@@ -614,6 +680,9 @@ a {
   border-radius: 20px;
   border-top: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.3);
+  line-height: 50px;
+  text-align: start;
+  /* padding-inline: 25px; */
 }
 
 .card .front {
@@ -625,10 +694,10 @@ a {
 }
 
 .card-image {
-  max-width: 130px;
+  max-width: 300px;
   /* padding: 25px; */
   padding-left: 30px;
-  padding-top: 30px;
+  /* padding-top: 30px; */
 }
 
 .card-text {
@@ -640,6 +709,9 @@ a {
   padding-left: 30px;
   /* padding-top: 30px; */
   font-family: "Montserrat", sans-serif;
+  color: #000000;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
 .card-text-funcao {
@@ -648,20 +720,55 @@ a {
   /* font-family: "Dancing Script", cursive; */
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
+  color: #000000;
+  text-align: start;
+  font-size: 1.2rem;
 }
 
-label:hover .card {
+.card-text-funcao-ano {
+  position: absolute;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  margin-left: 70%;
+  font-weight: bold;
+  font-size: 12rem;
+  opacity: 5%;
+  color: #000000;
+}
+
+.card-text-funcao-frente {
+  padding-left: 30px;
+  /* padding-top: 30px; */
+  /* font-family: "Dancing Script", cursive; */
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: #000000;
+  text-align: start;
+  font-size: 1.2rem;
+}
+
+.card-text-back {
+  padding-left: 30px;
+  /* padding-top: 30px; */
+  /* font-family: "Dancing Script", cursive; */
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: #000000;
+  font-size: 1rem;
+}
+
+/* label:hover .card {
   -webkit-transform: rotateY(10deg);
   border-radius: 20px;
   transform: rotateY(10deg);
   box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2);
-}
+} */
 
 input {
   display: none;
 }
 
-:checked + .card {
+/* :checked + .card {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
 }
@@ -670,7 +777,7 @@ label:hover :checked + .card {
   transform: rotateY(160deg);
   -webkit-transform: rotateY(160deg);
   box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2);
-}
+} */
 
 .glassContainer1 {
   position: absolute;
@@ -680,25 +787,25 @@ label:hover :checked + .card {
 
 .glassContainer2 {
   position: absolute;
-  top: 90%;
+  top: 120%;
   height: 10em;
 }
 
 .glassContainer3 {
   position: absolute;
-  top: 130%;
+  top: 190%;
   height: 10em;
 }
 
 .glassContainer4 {
   position: absolute;
-  top: 170%;
+  top: 260%;
   height: 10em;
 }
 
 .glassContainer5 {
   position: absolute;
-  top: 210%;
+  top: 290%;
   height: 10em;
 }
 
@@ -716,4 +823,6 @@ label:hover :checked + .card {
   margin: 1em;
   display: inline-block;
   object-fit: contain;
+  margin-top: 15em;
+  margin-inline: 0.2em;
 }
