--- a/onlyguima/src/App.css
+++ b/onlyguima/src/App.css
@@ -36,10 +36,9 @@
     transform: rotate(360deg);
   }
 }
-body {
+/* body {
   padding: 0;
   margin: 0;
-  /* background: #403f53; */
   background-image: url("./assets/pexels-johannes-plenio-1103970.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -50,6 +49,68 @@ body {
   font-family: "Lato", sans-serif;
   height: 300vh;
   background-attachment: fixed;
+} */
+
+html {
+  background-color: #c0392b;
+  background: radial-gradient(
+      circle at 50% 30%,
+      rgba(209, 209, 209, 0.04) 0%,
+      rgba(209, 209, 209, 0.04) 50%,
+      rgba(138, 138, 138, 0.04) 50%,
+      rgba(138, 138, 138, 0.04) 100%
+    ),
+    radial-gradient(
+      circle at 9% 40%,
+      rgba(209, 209, 209, 0.04) 0%,
+      rgba(209, 209, 209, 0.04) 50%,
+      rgba(71, 71, 71, 0.04) 50%,
+      rgba(71, 71, 71, 0.04) 100%
+    ),
+    radial-gradient(
+      circle at 84% 81%,
+      rgba(147, 147, 147, 0.04) 0%,
+      rgba(147, 147, 147, 0.04) 50%,
+      rgba(253, 253, 253, 0.04) 50%,
+      rgba(253, 253, 253, 0.04) 100%
+    ),
+    linear-gradient(266deg, rgb(5, 73, 170), rgb(140, 100, 243));
+}
+
+html,
+body {
+  height: 300vh;
+  margin: 0;
+  /* overflow: hidden; */
+  font-family: "Lato", sans-serif;
+}
+#carbonads a {
+  color: #fff;
+  text-decoration: none;
+}
+#carbonads a:hover {
+  color: #fff;
+}
+
+.circles {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  opacity: 0.5;
+  z-index: -1;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5rem 0;
+}
+h1 {
+  color: #fff;
 }
 
 @media screen and (max-width: 700px) {
